--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p>en la utilización de formulas como 3X <sup>3</sup> y log <sup>n</sup>explican la forma haciendo clic en la tecla <kbd>F2</kbd> </p>	
 <!-- esta es una etiqueta para abreviaturas y a la ves es una etiqueta de linea "tool type text" -->
 <abbr title="Centro de gestion Administrativa y Fortalecimiento Empresarial">CEGAFE</abbr>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <em>acorazado</em> Distinctio vel, voluptates ipsam, blanditiis consequatur laboriosam, minima a nostrum quo inventore voluptatum? Quaerat maxime error iste esse modi, porro aspernatur consectetur.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <em>acorazado!</em> Distinctio vel, voluptates ipsam, blanditiis consequatur laboriosam, minima a nostrum quo inventore voluptatum? Quaerat maxime error iste esse modi, porro aspernatur consectetur.</p>
 
 
 
